--- a/css/header.css
+++ b/css/header.css
@@ -31,3 +31,30 @@ nav {
     font-weight: 500;
 }
 
+.hero {
+    margin-top: 300px;
+}
+
+.hero h1 {
+    font-size: 3rem;
+    font-weight: bolder;
+    color: var(--secondary-color);
+}
+
+button {
+    margin-top: 200px;
+    padding: 28px 36px;
+    font-size: 1.2rem;
+    color: var(--primary-color);
+    background-color: var(--secondary-color);
+    border: none;
+    border-radius: 55px;
+    cursor: pointer;
+    transition: 0.3s ease;
+
+}
+
+button:hover {
+    background-color: #160c04;
+    color: white;
+}
