--- a/css/about.css
+++ b/css/about.css
@@ -1,7 +1,7 @@
 .about-section {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     gap: 200px;
     width: 100%;
     height: 100vh;
