--- a/css/food_icon_bar.css
+++ b/css/food_icon_bar.css
@@ -2,13 +2,13 @@
     margin-top: 200px;
     width: 100%;
     height: 15vh;
-    background-color: var(--secondary-color);
+    background-color: var(--tertiary-color);
 
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 20px;
-    padding: 10px 0;
+    padding: 50px 0;
 }
 
 .food-logo-bar ul {
@@ -21,21 +21,17 @@
 }
 
 .food-logo-bar ul li {
-    font-size: 3rem;
-    color: var(--primary-color);
-    gap: 100px;
+    font-size: 4rem;
+    color: var(--quaternary-color);
 }
 
 .food-logo-bar ul li i {
-    color: var(--primary-color) !important;
+    color: var(--quaternary-color) !important;
 }
 
 .food-logo-bar ul li a {
     text-decoration: none;
-    color: var(--primary-color);
+    color: var(--quaternary-color);
 }
 
-.food-logo-bar ul li a:hover {
-    color: var(--secondary-color) !important;
 
-}
