--- a/css/header.css
+++ b/css/header.css
@@ -15,7 +15,7 @@ nav {
 .logo {
     font-size: 2rem;
     font-weight: 300;
-    color: var(--secondary-color);
+    color: var(--black);
 }
 
 .nav-links {
@@ -30,7 +30,7 @@ nav {
 
 .nav-links a {
     text-decoration: none;
-    color: var(--secondary-color);
+    color: var(--black);
     font-size: 1.5rem;
     font-weight: 200;
 }
@@ -54,7 +54,7 @@ nav {
 .hero h1 {
     font-size: 3.5rem;
     font-weight: 700;
-    color: var(--secondary-color);
+    color: var(--black);
     margin-bottom: 20px;
 }
 
@@ -69,9 +69,9 @@ nav {
     margin-top: 20px;
     padding: 14px 28px;
     font-size: 1rem;
-    color: var(--primary-color);
-    background-color: var(--secondary-color);
-    border: 2px solid var(--secondary-color);
+    color: var(--white);
+    background-color: var(--black);
+    border: 2px solid var(--black);
     border-radius: 5px;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
@@ -79,7 +79,7 @@ nav {
 
 .hero button:hover {
     background-color: transparent;
-    color: var(--secondary-color);
+    color: var(--black);
 }
 
 .hero-image {
