--- a/css/uiverse.css
+++ b/css/uiverse.css
@@ -29,7 +29,7 @@
   .indicator {
     height: 100%;
     width: 200%;
-    background: var(--secondary-color);
+    background: var(--black);
     border-radius: 15px;
     transform: translate3d(-75%, 0, 0);
     transition: transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35);
